[aliases]
release = sdist bdist_wheel
test = pytest

[metadata]
name = moto
url = https://github.com/spulec/moto
project_urls =
    Docs: RTD = http://docs.getmoto.org/en/latest/
    CI: GitHub = https://github.com/spulec/moto/actions
    GitHub: issues = https://github.com/spulec/moto/issues
    GitHub: repo = https://github.com/spulec/moto
description = A library that allows your python tests to easily mock out the boto library
long_description = file: README.md
long_description_content_type = text/markdown
author = Steve Pulec
author_email = spulec@gmail.com
license_file = LICENSE
platforms = any
license = Apache
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: Apache Software License
    Topic :: Software Development :: Testing

[options]
python_requires = >=3.6
packages = find:
install_requires =
    boto3>=1.9.201
    botocore>=1.12.201
    cryptography>=3.3.1
    requests>=2.5
    xmltodict
    werkzeug
    pytz
    python-dateutil<3.0.0,>=2.1
    responses>=0.9.0
    MarkupSafe!=2.0.0a1 # This is a Jinja2 dependency, 2.0.0a1 currently seems broken
    Jinja2>=2.10.1
    more-itertools

[options.packages.find]
exclude =
  tests
  tests.*

[options.extras_require]
# https://github.com/spulec/moto/pull/3263#discussion_r477404984
apigateway =
  python-jose[cryptography]>=3.1.0,<4.0.0
  ecdsa<0.15
awslambda =
  docker>=2.5.1
batch =
  docker>=2.5.1
cloudformation =
  docker>=2.5.1
  PyYAML>=5.1
  cfn-lint>=0.4.0
cognitoidp =
  python-jose[cryptography]>=3.1.0,<4.0.0
  ecdsa<0.15
dynamodb2 =
  docker>=2.5.1
dynamodbstreams =
  docker>=2.5.1
ec2 =
  sshpubkeys>=3.1.0
efs =
  sshpubkeys>=3.1.0
iotdata =
  jsondiff>=1.1.2
s3 =
  PyYAML>=5.1
ssm =
  PyYAML>=5.1
xray =
  aws-xray-sdk!=0.96,>=0.93

server =
  python-jose[cryptography]>=3.1.0,<4.0.0
  ecdsa<0.15
  docker>=2.5.1
  PyYAML>=5.1
  cfn-lint>=0.4.0
  sshpubkeys>=3.1.0
  jsondiff>=1.1.2
  aws-xray-sdk!=0.96,>=0.93
  flask
  flask-cors

[options.entry_points]
console_scripts =
    moto_server = moto.server:main

[bdist_wheel]
universal=1

[tool:pytest]
testpaths = tests
markers =
    network: marks tests which require network connection
addopts =
    -sv
    --cov moto
    --cov-report xml

[coverage:run]
relative_files = True

